--- a/src/test/resources/example.yml
+++ b/src/test/resources/example.yml
@@ -1,3 +1,8 @@
 name: Coding Challenges
 challenge:
   name: YAML parser
+  tags:
+    difficulty: intermediate
+    type: parsing
+  steps: 5
+solution: Java
