support fold and pipe signs for block of text

--- a/src/test/resources/example.yml
+++ b/src/test/resources/example.yml
@@ -6,6 +6,14 @@ challenge:
     type: "parsing\nyaml\tfiles"
   steps: 5
   finished: false
+  introduction: |
+    YAML (which stands for YAML Ain’t Markup Language) is a lightweight data-interchange format often used for configuration.
+    Probably most notably for AWS CloudFormation and OpenAPI specifications.
+  description: >
+    Building a YAML parser is an easy way to learn about 
+    parsing techniques which are useful for 
+    everything from parsing simple data formats through to 
+    building a fully featured compiler for a programming language.
 solution: Java
 link: null
 author: ~
