--- a/src/test/resources/example.yml
+++ b/src/test/resources/example.yml
@@ -4,7 +4,16 @@ challenge:
   tags:
     difficulty: intermediate\n
     type: "parsing\nyaml\tfiles"
-  steps: 5
+  stepsNumber: 5
+  stepsDescriptions:
+    - Setup env
+    - Basic key value parsing
+    - Consider indentation
+    - Consider value type
+    - String special handling
+    - Arrays support
+    - Further development
+  steps: [Step 0, Step 1, Step 2, Step 3, Step 4, Step 5, Step 6]
   finished: false
   introduction: |
     YAML (which stands for YAML Ain’t Markup Language) is a lightweight data-interchange format often used for configuration.
